--- a/references.bib
+++ b/references.bib
@@ -281,3 +281,30 @@
 	pages = {659-666},
 	year = {1999},
 }
+
+@article{universal-weight-systems-from-a-mimimal-Z22-graded-lie-algebra,
+	author = {Aizawa, Naruhiko and Kimura, Daichi},
+	title = {Universal weight systems from a minimal {$\mathbb{Z}^{2}_{2}$}
+	         -graded lie algebra},
+	journal = {Journal of Knot Theory and Its Ramifications},
+	volume = {34},
+	number = {10},
+	year = {2025},
+}
+
+@online{rozansky-witten-theory,
+	title = {Rozansky-Witten theory},
+	author = {Justin Roberts},
+	year = {2001},
+	eprint = {math/0112209},
+	Eprinttype = {arXiv},
+}
+
+@book{higher-operads-higher-categories,
+	series = {London Mathematical Society Lecture Note Series},
+	title = {Higher Operads, Higher Categories},
+	publisher = {Cambridge University Press},
+	author = {Leinster, Tom},
+	year = {2004},
+	collection = {London Mathematical Society Lecture Note Series},
+}
