--- a/references.bib
+++ b/references.bib
@@ -308,3 +308,13 @@
 	year = {2004},
 	collection = {London Mathematical Society Lecture Note Series},
 }
+
+@article{riordan-trees-and-the-homotopy-sl2-weight-system,
+	title = {Riordan trees and the homotopy \(sl_{2}\) weight system},
+	journal = {Journal of Pure and Applied Algebra},
+	volume = {221},
+	number = {3},
+	pages = {691-706},
+	year = {2017},
+	author = {Jean-Baptiste Meilhan and Sakie Suzuki},
+}
