--- a/references.tex
+++ b/references.tex
@@ -2,4 +2,5 @@
 \addcontentsline{toc}{section}{\textit{References}}
 \markboth{\textit{References}}{\textit{References}}
 
+\vspace{-5cm}
 \printbibliography[heading=none]
