--- a/setup.tex
+++ b/setup.tex
@@ -211,4 +211,5 @@
 \emergencystretch=1em
 % TODO: Choose a bibstyle that makes titles rather than journal titles italicised.
 \usepackage[citestyle=alphabetic, bibstyle=alphabetic]{biblatex}
+\renewcommand*{\bibfont}{\normalfont\small}
 \bibliography{references}
